# Lobster-AI-Assistant-

./: README.md  pyproject.toml
lobster_assistant/: __init__.py  assistant.py  cli.py  config.py  llm.py  memory.py
lobster_assistant/connectors/: __init__.py  base.py  discord.py  manager.py  slack.py  telegram.py
lobster_assistant/voice/: __init__.py  server.py
lobster_assistant/voice/static/: app.js  index.html  styles.css
scripts/: start-assistant.ps1
tests/: test_assistant.py  test_config.py  test_whatsapp.py
